# ai-commit-message

./: README.md  pyproject.toml
.github/workflows/: deploy.yml
git_commit_gen/: git_commit_gen.py
